<resources>
    <string name="app_name">PresentView</string>
    <string name="action_settings">Ajustes</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="google_signin_button_text">Iniciar sesión con Google</string>
    <string name="google_signup_button_text">Registrarse con Google</string>

    <string name="name">Nombre</string>
    <string name="surname">Apellidos</string>
    <string name="birthdate">Fecha de nacimiento</string>
    <string name="provincia">Provincia</string>
    <string name="city">Ciudad</string>
    <string name="select_provincia">Seleccione Provincia</string>
    <string name="select_municipio">Seleccione Municipio</string>
    <string name="complete_data">Completar perfil</string>
    <string name="fail_form">Faltan datos por completar!</string>
    <string name="user">Usuario</string>
    <string name="mail">Mail</string>
    <string name="pass">Contraseña</string>
    <string name="error_404">Ops! Hay algún cable suelto.\nEstamos trabajando en ello!</string>
    <string name="error_400">Ops! Fallo al conectar!\nProbablemente se esté haciendo un uso indebido de la aplicación</string>

    <string name="error_not_network">Ops! No se ha detectado conexión a internet!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_questions">PresentView</string>
    <string name="title_activity_answers">AnswersActivity</string>

    <string name="question_finished">La pregunta se cerró el %s</string>
    <string name="question_starts_at">La pregunta comenzará el %s</string>
    <string name="confirm_answer">Confirmar la opción \"%s\"</string>
    <string name="question_prize">Si contentas a esta pregunta, podrás ganar el siguiente premio:\n\n\<b>%s</b></string>
    <string name="other_winner" formatted="false">El usuario ganador del premio \"%s\" es:\n\n<b>%s</b>\n\nRecuerda: Cuantas más preguntas contestes, más posibilidades de premio</string>
    <string name="me_winner"><b>¡¡¡ENHORABUENA!!!</b>\n\n Eres el ganador del premio \"%s\".\n\nEn unos días nos pondremos en contacto contigo para concretar la entrega del premio. ¡FELICIDADES!</string>


</resources>
